--- a/test/test.html
+++ b/test/test.html
@@ -22,6 +22,12 @@
 
     <p>Keypresses: <span>0</span></p>
     <button>Trigger the keypress event</button>
+    <div><span></span><span></span><span></span></div>
+    <ul>
+        <li><span></span></li>
+        <li><span></span></li>
+        <li><span></span></li>
+    </ul>
 
 </body>
 
