--- a/mobileWeb/index.html
+++ b/mobileWeb/index.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/index.css">
+    
     <title>Document</title>
 </head>
 <body>
     <!-- 顶部搜索 -->
     <div class="search-index">
-        <div class="search">搜索:目的地/酒店/景点/航班号</div>
+        <div class="search">搜索</div>
             <a href="#" class="user">我的</a>
     </div>
     <!-- 焦点图模块 -->
-    <div class="focus">
+    <!-- <div class="focus">
         <img src="upload/focus.jpg" alt="">
-    </div>
+    </div> -->
     <!-- 局部导航栏 -->
-    <ul class="local-nav">
+    <!-- <ul class="local-nav">
         <li>
             <a href="#" title="景点·玩乐">
                 <span class="local-nav-icon-icon1"></span>
@@ -52,8 +53,8 @@
             </a>
         </li>
 
-    </ul>
-    <nav>
+    </ul> -->
+    <!-- <nav>
         <div class="nav-common">
             <div class="nav-items">
                 <a href="#">海外酒店</a>
@@ -82,6 +83,6 @@
             </div>
             
         </div>
-    </nav>
+    </nav> -->
 </body>
 </html>
