--- a/webGIS/practice/practice1.html
+++ b/webGIS/practice/practice1.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <title>test</title>
+    <title>practice1</title>
 
     <link
       rel="stylesheet"
@@ -116,9 +116,11 @@
           ],
         });
         var map = new Map({
+          //底图
           layers: [imageLayer],
         });
         var view = new MapView({
+          //视图
           container: "viewDiv",
           map: map,
           zoom: 4,
@@ -139,38 +141,43 @@
           renderer: featureLayerRenderer, //渲染
           popupTemplate: {
             title: "AP",
-            content:[
-                {
-                    type:"fields",
-                    fieldInfos:[
-                    {
-                            fieldName:"OBJECTID",
-                            label:"OBJECTID",
-                            type:"oid"
-                        },{
-                            fieldName:"Shape",
-                            label:"Shape",
-                            type:"geometry"
-                        },{
-                            fieldName:"FWBM",
-                            label:"FWBM",
-                            type:"string"
-                        },{
-                            fieldName:"LC",
-                            label:"LC",
-                            type:"string"
-                        },{
-                            fieldName:"PointGUID",
-                            label:"PointGUID",
-                            type:"string"
-                        },{
-                            fieldName:"FJGUID",
-                            label:"FJGUID",
-                            type:"string"
-                        },
-                    ]
-                }
-            ]
+            content: [
+              {
+                type: "fields",
+                fieldInfos: [
+                  {
+                    fieldName: "OBJECTID",
+                    label: "xxx",
+                    type: "oid",
+                  },
+                  {
+                    fieldName: "Shape",
+                    label: "Shape",
+                    type: "geometry",
+                  },
+                  {
+                    fieldName: "FWBM",
+                    label: "FWBM",
+                    type: "string",
+                  },
+                  {
+                    fieldName: "LC",
+                    label: "LC",
+                    type: "string",
+                  },
+                  {
+                    fieldName: "PointGUID",
+                    label: "PointGUID",
+                    type: "string",
+                  },
+                  {
+                    fieldName: "FJGUID",
+                    label: "FJGUID",
+                    type: "string",
+                  },
+                ],
+              },
+            ],
           },
         });
 
