--- a/webGIS/practice/practice2.html
+++ b/webGIS/practice/practice2.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="http://192.168.137.113/arcgis_js_api/library/4.18/esri/themes/light/main.css"
     />
+    <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="http://192.168.137.113/arcgis_js_api/library/4.18/init.js"></script>
     <style>
       html,
@@ -27,7 +28,7 @@
         width: 240px;
       }
 
-      #drop-downs {
+      #dropDowns {
         padding-bottom: 15px;
       }
 
@@ -72,8 +73,6 @@
           scale: 16000,
           center: [114.40776, 30.51415],
         });
-
-        var att = document.getElementById("well-type");
         //console.log(att.value);
         var query = new Query();
         query.returnGeometry = true;
@@ -81,8 +80,9 @@
 
         view.when(function () {
           view.ui.add("infoDiv", "top-left");
-          document.getElementById("doBtn").addEventListener("click", doQuery);
+          //document.getElementById("doBtn").addEventListener("click", doQuery);
         });
+        var att = document.getElementById("wellType");
         function doQuery() {
           //执行查询
           resultsLayer.removeAll(); //清空上次查询结果
@@ -105,6 +105,9 @@
           document.getElementById("resultConut").innerHTML =
             peakResults.length + "条结果！";
         }
+        $(document).ready(function () {
+          $("#wellType").change(doQuery);
+        });
       });
     </script>
   </head>
@@ -112,9 +115,9 @@
   <body>
     <div id="viewDiv"></div>
     <div id="infoDiv" class="esri-widget">
-      <div id="drop-downs">
+      <div id="dropDowns">
         选择楼层
-        <select id="well-type" class="esri-widget">
+        <select id="wellType" class="esri-widget">
           <option value="">请选择</option>
           <option value="1">1</option>
           <option value="2">2</option>
@@ -129,7 +132,7 @@
           <option value="11">11</option>
           <option value="12">12</option>
         </select>
-        <button id="doBtn" class="esri-widget">查询</button>
+        <!-- <button id="doBtn" class="esri-widget">查询</button> -->
         <p><span id="resultConut"></span></p>
       </div>
     </div>
