--- a/webGIS/practice/practice2.html
+++ b/webGIS/practice/practice2.html
@@ -31,23 +31,29 @@
         padding-bottom: 15px;
       }
 
-      #results {
-        font-weight: bolder;
-        padding-top: 10px;
-      }
-
       #formDiv {
-        width: 100%;
         background: #fff;
       }
       .scroller {
         overflow-x: hidden;
         overflow-y: auto;
       }
+      .esri-item-list__scroller {
+        overflow-y: visible;
+      }
+
+      .editArea-container {
+        background: #fff;
+        line-height: 1.5em;
+        overflow: auto;
+        padding: 12px 15px;
+        width: 300px;
+      }
     </style>
     <script>
       require([
         "esri/Map",
+        "esri/Graphic",
         "esri/views/MapView",
         "esri/layers/MapImagelayer",
         "esri/layers/GraphicsLayer",
@@ -56,9 +62,9 @@
         "esri/tasks/support/Query",
         "esri/widgets/FeatureTemplates",
         "esri/widgets/FeatureForm",
-        "esri/widgets/FeatureTemplates",
       ], function (
         Map,
+        Graphic,
         MapView,
         MapImageLayer,
         GraphicsLayer,
@@ -66,8 +72,7 @@
         QueryTask,
         Query,
         FeatureTemplates,
-        FeatureForm,
-        FeatureTemplates
+        FeatureForm
       ) {
         var imageLayer = new MapImageLayer({
           url: "http://192.168.137.113/server/rest/services/20210129二维矢量地图/MapServer",
@@ -91,24 +96,18 @@
         });
         view.when(function () {
           view.ui.add("infoDiv", "top-left");
-          document
-            .getElementById("wellType")
-            .addEventListener("change", apQuery);
-          document
-            .getElementById("doBtn")
-            .addEventListener("click", pointsQueryTask);
-          document
-            .getElementById("testPoint")
-            .addEventListener("click", function () {
-              document.getElementById("pointQuery").value =
-                "EC0B323AD70C41D3AF9D5F103E364107";
-            });
-          document
-            .getElementById("testPoint2")
-            .addEventListener("click", function () {
-              document.getElementById("pointQuery").value =
-                "E248B03DF7704FFF81DFB2A85B1EF8DE";
-            });
+          view.ui.add("editArea", "top-right");
+          document.getElementById("wellType").onchange = apQuery;
+
+          document.getElementById("doBtn").onclick = pointsQueryTask;
+          document.getElementById("testPoint").onclick = function () {
+            document.getElementById("pointQuery").value =
+              "EC0B323AD70C41D3AF9D5F103E364107";
+          };
+          document.getElementById("testPoint2").onclick = function () {
+            document.getElementById("pointQuery").value =
+              "E248B03DF7704FFF81DFB2A85B1EF8DE";
+          };
         });
         //2.根据AP图层的LC（楼层）属性，显示不同楼层的AP点位；通过下拉框选择楼层
         function apQuery() {
@@ -124,7 +123,6 @@
               apCount + "条结果";
           });
         }
-
         //3.根据PointGUID属性，查询对应的AP，并进行跳转
         var query = new Query({
           returnGeometry: true,
@@ -201,7 +199,218 @@
             }
           });
         }
-        
+        //4.要素图层的编辑（添加、修改、删除）
+        var blankFeatureLayer = new FeatureLayer({
+          url: "http://192.168.137.113/server/rest/services/Hosted/20201123空白AP图层姚刚用/FeatureServer/1",
+          id: "incidentsLayer",
+          renderer: {
+            type: "simple",
+            symbol: {
+              type: "simple-marker",
+              color: "#ffff00",
+              size: 15,
+            },
+          },
+          outFields: ["*"],
+          formTemplate: {
+            title: "修改属性",
+            description: "输入相应值以修改属性",
+            elements: [
+              {
+                // Autocasts to new FieldElement
+                type: "field",
+                fieldName: "fwbm",
+                label: "-fwbm-",
+              },
+              {
+                type: "field",
+                fieldName: "lc",
+                label: "-lc-",
+              },
+              {
+                type: "field",
+                fieldName: "flag",
+                label: "-flag-",
+              },
+            ],
+          },
+        });
+        map.add(blankFeatureLayer);
+        let highlight, editFeature;
+        const form = new FeatureForm({
+          container: "formDiv",
+          layer: blankFeatureLayer,
+        });
+        //监听表单提交事件
+        form.on("submit", function () {
+          if (editFeature) {
+            const updated = form.getValues();
+            Object.keys(updated).forEach(function (name) {
+              editFeature.attributes[name] = updated[name];
+            });
+            const edits = {
+              updateFeatures: [editFeature],
+            };
+            applyEditsAttributes(edits);
+            document.getElementById("viewDiv").style.cursor = "auto";
+          }
+        });
+        selectExistingFeature();
+        const templates = new FeatureTemplates({
+          container: "addTemplatesDiv",
+          layers: [blankFeatureLayer],
+        });
+        templates.on("select", function (evtTemplate) {
+          attributes = evtTemplate.template.prototype.attributes;
+          unselectFeature();
+          document.getElementById("viewDiv").style.cursor = "crosshair";
+          const handler = view.on("click", function (event) {
+            // remove click event handler once user clicks on the view
+            // to create a new feature
+            handler.remove();
+            event.stopPropagation();
+            form.feature = null;
+
+            if (event.mapPoint) {
+              point = event.mapPoint.clone();
+              point.z = undefined;
+              point.hasZ = false;
+
+              // Create a new feature using one of the selected
+              // template items.
+              editFeature = new Graphic({
+                geometry: point,
+                attributes: {
+                  IncidentType: attributes.IncidentType,
+                },
+              });
+
+              // Setup the applyEdits parameter with adds.
+              const edits = {
+                addFeatures: [editFeature],
+              };
+              applyEditsAttributes(edits);
+              document.getElementById("viewDiv").style.cursor = "auto";
+            } else {
+              console.error("event.mapPoint is not defined");
+            }
+          });
+        });
+        // 执行属性修改
+        function applyEditsAttributes(params) {
+          blankFeatureLayer
+            .applyEdits(params)
+            .then(function (editsResult) {
+              if (
+                editsResult.addFeatureResults.length > 0 ||
+                editsResult.updateFeatureResults.length > 0
+              ) {
+                unselectFeature();
+                let objectId;
+                if (editsResult.addFeatureResults.length > 0) {
+                  objectId = editsResult.addFeatureResults[0].objectId;
+                } else {
+                  featureForm.feature = null;
+                  objectId = editsResult.updateFeatureResults[0].objectId;
+                }
+                selectFeature(objectId);
+                if (addFeatureDiv.style.display === "block") {
+                  toggleEditingDivs("none", "block");
+                }
+              } else if (editsResult.deleteFeatureResults.length > 0) {
+                toggleEditingDivs("block", "none");
+              }
+            })
+            .catch(function (error) {
+              console.log("===============================================");
+              console.error(
+                "[ applyEdits ] FAILURE: ",
+                error.code,
+                error.name,
+                error.message
+              );
+              console.log("error = ", error);
+            });
+        }
+
+        function selectExistingFeature() {
+          view.on("click", function (event) {
+            // clear previous feature selection
+            unselectFeature();
+            if (
+              document.getElementById("viewDiv").style.cursor != "crosshair"
+            ) {
+              view.hitTest(event).then(function (response) {
+                // If a user clicks on an incident feature, select the feature.
+                if (response.results.length === 0) {
+                  toggleEditingDivs("block", "none");
+                } else if (
+                  response.results[0].graphic &&
+                  response.results[0].graphic.layer.id == "incidentsLayer"
+                ) {
+                  if (addFeatureDiv.style.display === "block") {
+                    toggleEditingDivs("none", "block");
+                  }
+                  selectFeature(
+                    response.results[0].graphic.attributes[
+                      blankFeatureLayer.objectIdField
+                    ]
+                  );
+                }
+              });
+            }
+          });
+        }
+        // 未选择feature时去除高亮
+        function unselectFeature() {
+          if (highlight) {
+            highlight.remove();
+          }
+        }
+        // 表单中展示点击的feature的field值
+        function selectFeature(objectId) {
+          blankFeatureLayer
+            .queryFeatures({
+              objectIds: [objectId],
+              outFields: ["*"],
+            })
+            .then(function (res) {
+              if (res.features.length > 0) {
+                editFeature = res.features[0];
+                // 在表单中展示fields
+                form.feature = editFeature;
+                // 高亮显示feature
+                view
+                  .whenLayerView(editFeature.layer)
+                  .then(function (layerView) {
+                    highlight = layerView.highlight(editFeature);
+                  });
+              }
+            });
+        }
+
+        const addFeatureDiv = document.getElementById("addFeatureDiv");
+        const attributeEditing = document.getElementById("featureUpdateDiv");
+        // 控制Div的消失与出现
+        function toggleEditingDivs(addDiv, attributesDiv) {
+          addFeatureDiv.style.display = addDiv;
+
+          attributeEditing.style.display = attributesDiv;
+        }
+        //document.getElementById("btnAdd").onclick = evt;
+        // 修改feature
+        document.getElementById("btnUpdate").onclick = function () {
+          form.submit();
+        };
+        // 删除feature
+        document.getElementById("btnDelete").onclick = function () {
+          // setup the applyEdits parameter with deletes.
+          const edits = {
+            deleteFeatures: [editFeature],
+          };
+          applyEditsAttributes(edits);
+          document.getElementById("viewDiv").style.cursor = "auto";
+        };
       });
     </script>
   </head>
@@ -239,8 +448,35 @@
           <span id="copyResult"></span>
         </div>
       </div>
-      <p></p>
     </div>
-    
+
+    <div id="editArea" class="editArea-container esri-widget--panel">
+      <div id="addFeatureDiv" style="display: block">
+        <ul style="font-size: 15px; padding-left: 1.5em">
+          <li>选择过滤器类型以添加新要素</li>
+          <li>选择已有要素进行修改</li>
+          <li>选择已有要素进行删除</li>
+        </ul>
+        <!-- <button id="btnAdd" class="esri-button">添加要素</button> -->
+        <div id="addTemplatesDiv" style="background: #fff"></div>
+      </div>
+
+      <div id="featureUpdateDiv" style="display: none" class="esri-widget">
+        <div id="formDiv" class="scroller esri-component"></div>
+        <input
+          type="button"
+          class="esri-button"
+          value="更新要素"
+          id="btnUpdate"
+        />
+        <br />
+        <input
+          type="button"
+          class="esri-button"
+          value="删除要素"
+          id="btnDelete"
+        />
+      </div>
+    </div>
   </body>
 </html>
